[package]
name = "rustc-hash"
version = "1.1.0"
authors = ["The Rust Project Developers"]
description = "A speedy, non-cryptographic hashing algorithm used by rustc and Firefox"
license = "Apache-2.0/MIT"
readme = "README.md"
keywords = ["hash", "hasher", "fxhash", "rustc"]
repository = "https://github.com/rust-lang/rustc-hash"
edition = "2018"

[features]
default = ["std"]
std = []
nightly = []
rand = ["dep:rand", "std"]

[dependencies]
rand = { version = "0.8", optional = true }
